# arlima-matcher

./: .gitignore  pyproject.toml
src/: requirements.txt
src/arlima/: __init__.py  __version__.py  arlima_client.py  date_parser.py  exceptions.py  fm.py  main.py  page.py  request_index.py  request_pages.py  witness.py
src/examples/: __init__.py  arlima.html  fp.py
src/openstemmata/: tei_parser.py  utils.py
src/openstemmata/components/fileDesc/: __init__.py
src/openstemmata/components/fileDesc/sourceDesc/: listWit.py
src/openstemmata/components/profileDesc/: __init__.py  creation.py  langusage.py  textclass.py
src/tests/: __init__.py  test_scraping.py  test_tei_model.py
