[build-system]
requires = ["setuptools>=62", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "arlima"
dependencies = [
    "annotated-types==0.6.0",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "duckdb==0.10.1",
    "idna==3.6",
    "iniconfig==2.0.0",
    "lxml==5.2.1",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "packaging==24.0",
    "pluggy==1.4.0",
    "pydantic==2.6.4",
    "pydantic-xml==2.9.0",
    "pydantic_core==2.16.3",
    "Pygments==2.17.2",
    "pytest==8.1.1",
    "rapidfuzz==3.8.1",
    "requests==2.31.0",
    "rich==13.7.1",
    "setuptools==69.2.0",
    "soupsieve==2.5",
    "typing_extensions==4.11.0",
    "urllib3==2.2.1",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "arlima.VERSION"}

[tool.setuptools_scm]
# Leave empty for the dynamic version metadata

[tool.pytest.ini_options]
testpaths = ["tests", "arlima", "openstemmata"]
addopts = "-v -ra -q --doctest-modules"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
# Specify a custom directory for pytest cache
cache_dir = ".pytest_cache"
